# Neuro-CTNet-Foundation-Model

./: README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
configs/: debug.yaml  tiny_lm.yaml
docs/: ABLATIONS.md  ARCHITECTURE.md  BASELINE.md  BENCHMARK.md  BENCHMARK_REPORT.md  COMPARISON.md  EVALUATION.md  IMPLEMENTATION_CONTRACT.md  REPORTS.md  ROADMAP.md  SYNTHETIC_TASKS.md
src/nctnet/: __init__.py  ablations.py  admissibility.py  baseline.py  benchmark.py  benchmark_report.py  blocks.py  cli.py  coherence.py  compare.py  config.py  core.py  eval.py  image.py  lm.py  memory.py  multicard.py  regime.py  relations.py  report.py  residual.py  reversible.py  task_families.py  tensors.py  trainer.py  up.py
tests/: test_ablations.py  test_baseline.py  test_benchmark.py  test_benchmark_report.py  test_compare.py  test_core.py  test_eval.py  test_module_api.py  test_report.py  test_task_families.py
