[project]
name = "neuro-ctnet-foundation"
version = "0.1.0"
description = "Neuro-CTNet foundation architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch", "numpy", "pyyaml", "tqdm"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
